--- a/doc.html
+++ b/doc.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Download PDF</title>
-    <meta http-equiv="Refresh" content="0; url='./CodeWWW%20NDA%20Between%20Parties%20A%20(CodeWWW)%20and%20B%20(Zack%20%5B%40cioutskies%5D.pdf'" />
+    <meta http-equiv="Refresh" content="0; url='./NDA43.docx'" />
   </head>
   <body>
     <h2>Downloading now...</h2>
