--- a/rep$$/018*362/index.html
+++ b/rep$$/018*362/index.html
@@ -17,7 +17,7 @@
             const responseDiv = document.getElementById('response');
 
             try {
-                const response = await fetch('https://chatbot-worker.<your-subdomain>.workers.dev/chat', {
+                const response = await fetch('https://cool-breeze-b6de.cubiodojo.workers.dev/chat', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ message: userMessage }),
