--- a/rep$$/018*362/index.html
+++ b/rep$$/018*362/index.html
@@ -1,132 +1,191 @@
-export default {
-    async fetch(request) {
-        // Handle CORS for preflight requests
-        if (request.method === "OPTIONS") {
-            return new Response(null, {
-                headers: {
-                    "Access-Control-Allow-Origin": "*",
-                    "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-                    "Access-Control-Allow-Headers": "Content-Type",
-                },
-            });
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CodeWWW IT Support</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
-        const url = new URL(request.url);
+        .chat-container {
+            width: 90%;
+            max-width: 600px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+        }
 
-        // Handle chatbot interactions
-        if (request.method === "POST" && url.pathname === "/chat") {
-            const body = await request.json();
+        .chat-header {
+            background-color: #0078d7;
+            color: #ffffff;
+            padding: 15px;
+            text-align: center;
+            font-size: 18px;
+            font-weight: bold;
+        }
 
-            // Validate user input
-            const userMessage = body.message;
-            if (!userMessage) {
-                return new Response(JSON.stringify({ error: "Message is required." }), {
-                    headers: { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" },
-                    status: 400,
+        .chat-messages {
+            flex: 1;
+            padding: 15px;
+            overflow-y: auto;
+            background-color: #f9f9f9;
+        }
+
+        .message {
+            margin-bottom: 15px;
+            display: flex;
+        }
+
+        .message.user {
+            justify-content: flex-end;
+        }
+
+        .message-bubble {
+            max-width: 70%;
+            padding: 10px 15px;
+            border-radius: 20px;
+            font-size: 14px;
+            line-height: 1.5;
+        }
+
+        .message.user .message-bubble {
+            background-color: #0078d7;
+            color: #ffffff;
+            border-bottom-right-radius: 0;
+        }
+
+        .message.bot .message-bubble {
+            background-color: #e4e6eb;
+            color: #333333;
+            border-bottom-left-radius: 0;
+        }
+
+        .typing-indicator {
+            font-style: italic;
+            color: #666;
+            margin: 5px 0;
+        }
+
+        .chat-input {
+            display: flex;
+            border-top: 1px solid #ddd;
+            background-color: #ffffff;
+        }
+
+        .chat-input textarea {
+            flex: 1;
+            padding: 10px;
+            border: none;
+            outline: none;
+            resize: none;
+            font-size: 14px;
+        }
+
+        .chat-input button {
+            background-color: #0078d7;
+            color: #ffffff;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .chat-input button:hover {
+            background-color: #005bb5;
+        }
+    </style>
+</head>
+<body>
+    <div class="chat-container">
+        <div class="chat-header">
+            CodeWWW IT Support
+        </div>
+        <div class="chat-messages" id="chatMessages">
+            <!-- Messages will appear here -->
+        </div>
+        <div class="chat-input">
+            <textarea id="userMessage" placeholder="Type your message here..." rows="1"></textarea>
+            <button onclick="sendMessage()">Send</button>
+        </div>
+    </div>
+
+    <script>
+        const chatMessages = document.getElementById('chatMessages');
+        const userMessageInput = document.getElementById('userMessage');
+
+        function addMessage(content, sender) {
+            const message = document.createElement('div');
+            message.classList.add('message', sender);
+            const bubble = document.createElement('div');
+            bubble.classList.add('message-bubble');
+            bubble.textContent = content;
+            message.appendChild(bubble);
+            chatMessages.appendChild(message);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        function addTypingIndicator() {
+            const typingIndicator = document.createElement('div');
+            typingIndicator.classList.add('typing-indicator');
+            typingIndicator.textContent = "Agent is typing...";
+            typingIndicator.id = "typingIndicator";
+            chatMessages.appendChild(typingIndicator);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        function removeTypingIndicator() {
+            const typingIndicator = document.getElementById('typingIndicator');
+            if (typingIndicator) {
+                typingIndicator.remove();
+            }
+        }
+
+        async function sendMessage() {
+            const userMessage = userMessageInput.value.trim();
+            if (!userMessage) return;
+
+            // Add user's message to the chat
+            addMessage(userMessage, 'user');
+            userMessageInput.value = '';
+
+            // Simulate agent typing
+            addTypingIndicator();
+
+            try {
+                // Simulate delay for typing
+                await new Promise(resolve => setTimeout(resolve, 2000));
+
+                // Send the user's message to the chatbot API
+                const response = await fetch('https://chatbot-worker.<your-subdomain>.workers.dev/chat', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ message: userMessage }),
                 });
+
+                const data = await response.json();
+
+                // Remove typing indicator
+                removeTypingIndicator();
+
+                // Add agent's response to the chat
+                addMessage(data.response, 'bot');
+            } catch (error) {
+                removeTypingIndicator();
+                addMessage('Error: Unable to connect to the support agent.', 'bot');
             }
-
-            // Check for social engineering attempts
-            const result = detectSocialEngineering(userMessage);
-            if (result.success) {
-                return new Response(
-                    JSON.stringify({ response: "Exercise Finished" }),
-                    {
-                        headers: { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" },
-                    }
-                );
-            }
-
-            // Generate a response as an IT support agent
-            const aiResponse = generateITSupportResponse(userMessage);
-
-            return new Response(JSON.stringify({ response: aiResponse }), {
-                headers: { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" },
-            });
         }
-
-        // Default response for unsupported routes
-        return new Response("Welcome to CodeWWW IT Support Chatbot!", {
-            headers: { "Content-Type": "text/plain", "Access-Control-Allow-Origin": "*" },
-        });
-    },
-};
-
-// Function to generate IT support responses
-function generateITSupportResponse(userMessage) {
-    const keywords = [
-        { keyword: "password", response: "It seems like you're having trouble with your password. Have you tried resetting it through our self-service portal?" },
-        { keyword: "email", response: "If you're having issues with your email, please check if you're logged in and your internet connection is stable." },
-        { keyword: "slow", response: "Performance issues can often be resolved by restarting your system. Have you tried that yet?" },
-        { keyword: "printer", response: "Printer issues can be frustrating! Is the printer showing any error messages or is it out of paper?" },
-        { keyword: "network", response: "Network issues might be caused by a local outage. Can you confirm if other devices are experiencing the same problem?" },
-    ];
-
-    // Default response
-    let response = "I'm here to assist with any IT-related issues. Can you provide more details about your problem?";
-
-    // Match keywords to user message
-    for (const { keyword, response: keywordResponse } of keywords) {
-        if (userMessage.toLowerCase().includes(keyword)) {
-            response = keywordResponse;
-            break;
-        }
-    }
-
-    // Add escalation suggestion for unresolved issues
-    response += " If this doesn't resolve your issue, I can escalate it to our technical team. Let me know!";
-    return response;
-}
-
-// Function to detect social engineering attempts
-function detectSocialEngineering(userMessage) {
-    const suspiciousPatterns = [
-        "can you give me the admin password",
-        "what's the vpn login",
-        "i forgot my credentials, can you reset",
-        "i need access to the internal system",
-        "can you share the server details",
-    ];
-
-    const threshold = 0.7; // Similarity threshold (70%)
-    const userMessageLower = userMessage.toLowerCase();
-
-    for (const pattern of suspiciousPatterns) {
-        const similarity = calculateSimilarity(userMessageLower, pattern);
-        if (similarity >= threshold) {
-            return { success: true };
-        }
-    }
-
-    return { success: false };
-}
-
-// Custom implementation of Levenshtein distance
-function calculateSimilarity(input, pattern) {
-    const len1 = input.length;
-    const len2 = pattern.length;
-
-    // Create a 2D array for the distance matrix
-    const dp = Array.from({ length: len1 + 1 }, () => Array(len2 + 1).fill(0));
-
-    // Initialize the distance matrix
-    for (let i = 0; i <= len1; i++) dp[i][0] = i;
-    for (let j = 0; j <= len2; j++) dp[0][j] = j;
-
-    // Compute the Levenshtein distance
-    for (let i = 1; i <= len1; i++) {
-        for (let j = 1; j <= len2; j++) {
-            const cost = input[i - 1] === pattern[j - 1] ? 0 : 1;
-            dp[i][j] = Math.min(
-                dp[i - 1][j] + 1, // Deletion
-                dp[i][j - 1] + 1, // Insertion
-                dp[i - 1][j - 1] + cost // Substitution
-            );
-        }
-    }
-
-    const distance = dp[len1][len2];
-    const maxLength = Math.max(len1, len2);
-
-    return 1 - distance / maxLength; // Similarity as a percentage
-}
+    </script>
+</body>
+</html>
