--- a/rep$$/018*362/index.html
+++ b/rep$$/018*362/index.html
@@ -156,19 +156,15 @@
             const userMessage = userMessageInput.value.trim();
             if (!userMessage) return;
 
-            // Add user's message to the chat
             addMessage(userMessage, 'user');
             userMessageInput.value = '';
 
-            // Simulate agent typing
             addTypingIndicator();
 
             try {
-                // Simulate delay for typing
                 await new Promise(resolve => setTimeout(resolve, 2000));
 
-                // Send the user's message to the chatbot API
-                const response = await fetch('https://chatbot-worker.<your-subdomain>.workers.dev/chat', {
+                const response = await fetch('https://cool-breeze-b6de.cubiodojo.workers.dev//chat', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ message: userMessage }),
@@ -176,10 +172,7 @@
 
                 const data = await response.json();
 
-                // Remove typing indicator
                 removeTypingIndicator();
-
-                // Add agent's response to the chat
                 addMessage(data.response, 'bot');
             } catch (error) {
                 removeTypingIndicator();
