--- a/rep$$/018*362/index.html
+++ b/rep$$/018*362/index.html
@@ -164,7 +164,7 @@
             try {
                 await new Promise(resolve => setTimeout(resolve, 2000));
 
-                const response = await fetch('https://cool-breeze-b6de.cubiodojo.workers.dev//chat', {
+                const response = await fetch('https://cool-breeze-b6de.cubiodojo.workers.dev/chat', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ message: userMessage }),
