--- a/rep$$/018*362/index.html
+++ b/rep$$/018*362/index.html
@@ -1,190 +1,184 @@
-export default {
-    async fetch(request, env) {
-        const url = new URL(request.url);
-
-        // Handle CORS for preflight requests
-        if (request.method === "OPTIONS") {
-            return new Response(null, {
-                headers: {
-                    "Access-Control-Allow-Origin": "*",
-                    "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-                    "Access-Control-Allow-Headers": "Content-Type",
-                },
-            });
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CodeWWW IT Support</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
-        if (url.pathname === "/admin/transcripts/") {
-            return await fetchTranscripts(env.CHAT_LOGS);
+        .chat-container {
+            width: 90%;
+            max-width: 600px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
         }
 
-        if (request.method === "POST" && url.pathname === "/chat") {
-            return await handleChatRequest(request, env);
+        .chat-header {
+            background-color: #0078d7;
+            color: #ffffff;
+            padding: 15px;
+            text-align: center;
+            font-size: 18px;
+            font-weight: bold;
         }
 
-        // Default response for unsupported routes
-        return new Response("Welcome to CodeWWW IT Support Chatbot!", {
-            headers: { "Content-Type": "text/plain", "Access-Control-Allow-Origin": "*" },
-        });
-    },
-};
-
-// Function to handle chat requests
-async function handleChatRequest(request, env) {
-    try {
-        const body = await request.json();
-
-        // Validate user input
-        const userMessage = body.message;
-        if (!userMessage) {
-            return new Response(JSON.stringify({ error: "Message is required." }), {
-                headers: { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" },
-                status: 400,
-            });
+        .chat-messages {
+            flex: 1;
+            padding: 15px;
+            overflow-y: auto;
+            background-color: #f9f9f9;
         }
 
-        const userAgent = request.headers.get("User-Agent") || "Unknown";
-
-        // Check for social engineering attempts
-        const result = detectSocialEngineering(userMessage);
-        const response = result.success
-            ? "Exercise Finished"
-            : generateITSupportResponse(userMessage);
-
-        // Log the conversation
-        await logConversation(env.CHAT_LOGS, body.sessionId, userMessage, response, userAgent);
-
-        return new Response(JSON.stringify({ response }), {
-            headers: { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" },
-        });
-    } catch (error) {
-        return new Response(JSON.stringify({ error: "Unable to process your message", details: error.message }), {
-            headers: { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" },
-            status: 500,
-        });
-    }
-}
-
-// Function to fetch all transcripts
-async function fetchTranscripts(kvNamespace) {
-    try {
-        const keys = await kvNamespace.list();
-        const transcripts = {};
-
-        for (const key of keys.keys) {
-            const logs = await kvNamespace.get(key.name, { type: "json" });
-            transcripts[key.name] = logs || [];
+        .message {
+            margin-bottom: 15px;
+            display: flex;
         }
 
-        // Return the transcripts as JSON
-        return new Response(JSON.stringify(transcripts, null, 2), {
-            headers: { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" },
-        });
-    } catch (error) {
-        // Handle any errors gracefully and provide a helpful response
-        return new Response(JSON.stringify({ error: "Unable to fetch transcripts", details: error.message }), {
-            headers: { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" },
-            status: 500,
-        });
-    }
-}
-
-// Function to generate IT support responses
-function generateITSupportResponse(userMessage) {
-    const keywords = [
-        { keyword: "password", response: "It seems like you're having trouble with your password. Have you tried resetting it through our self-service portal?" },
-        { keyword: "email", response: "If you're having issues with your email, please check if you're logged in and your internet connection is stable." },
-        { keyword: "slow", response: "Performance issues can often be resolved by restarting your system. Have you tried that yet?" },
-        { keyword: "printer", response: "Printer issues can be frustrating! Is the printer showing any error messages or is it out of paper?" },
-        { keyword: "network", response: "Network issues might be caused by a local outage. Can you confirm if other devices are experiencing the same problem?" },
-    ];
-
-    // Default response
-    let response = "I'm here to assist with any IT-related issues. Can you provide more details about your problem?";
-
-    // Match keywords to user message
-    for (const { keyword, response: keywordResponse } of keywords) {
-        if (userMessage.toLowerCase().includes(keyword)) {
-            response = keywordResponse;
-            break;
+        .message.user {
+            justify-content: flex-end;
         }
-    }
 
-    // Add escalation suggestion for unresolved issues
-    response += " If this doesn't resolve your issue, I can escalate it to our technical team. Let me know!";
-    return response;
-}
-
-// Function to detect social engineering attempts
-function detectSocialEngineering(userMessage) {
-    const suspiciousPatterns = [
-        "can you give me the admin password",
-        "what's the vpn login",
-        "i forgot my credentials, can you reset",
-        "i need access to the internal system",
-        "can you share the server details",
-    ];
-
-    const threshold = 0.7; // Similarity threshold (70%)
-    const userMessageLower = userMessage.toLowerCase();
-
-    for (const pattern of suspiciousPatterns) {
-        const similarity = calculateSimilarity(userMessageLower, pattern);
-        if (similarity >= threshold) {
-            return { success: true };
+        .message-bubble {
+            max-width: 70%;
+            padding: 10px 15px;
+            border-radius: 20px;
+            font-size: 14px;
+            line-height: 1.5;
         }
-    }
 
-    return { success: false };
-}
-
-// Custom implementation of Levenshtein distance
-function calculateSimilarity(input, pattern) {
-    const len1 = input.length;
-    const len2 = pattern.length;
-
-    // Create a 2D array for the distance matrix
-    const dp = Array.from({ length: len1 + 1 }, () => Array(len2 + 1).fill(0));
-
-    // Initialize the distance matrix
-    for (let i = 0; i <= len1; i++) dp[i][0] = i;
-    for (let j = 0; j <= len2; j++) dp[0][j] = j;
-
-    // Compute the Levenshtein distance
-    for (let i = 1; i <= len1; i++) {
-        for (let j = 1; j <= len2; j++) {
-            const cost = input[i - 1] === pattern[j - 1] ? 0 : 1;
-            dp[i][j] = Math.min(
-                dp[i - 1][j] + 1, // Deletion
-                dp[i][j - 1] + 1, // Insertion
-                dp[i - 1][j - 1] + cost // Substitution
-            );
+        .message.user .message-bubble {
+            background-color: #0078d7;
+            color: #ffffff;
+            border-bottom-right-radius: 0;
         }
-    }
 
-    const distance = dp[len1][len2];
-    const maxLength = Math.max(len1, len2);
+        .message.bot .message-bubble {
+            background-color: #e4e6eb;
+            color: #333333;
+            border-bottom-left-radius: 0;
+        }
 
-    return 1 - distance / maxLength; // Similarity as a percentage
-}
+        .typing-indicator {
+            font-style: italic;
+            color: #666;
+            margin: 5px 0;
+        }
 
-// Function to log conversations in KV
-async function logConversation(kvNamespace, sessionId, userMessage, botResponse, userAgent) {
-    const timestamp = new Date().toISOString();
+        .chat-input {
+            display: flex;
+            border-top: 1px solid #ddd;
+            background-color: #ffffff;
+        }
 
-    // Create a log entry
-    const logEntry = {
-        timestamp,
-        userMessage,
-        botResponse,
-        userAgent,
-    };
+        .chat-input textarea {
+            flex: 1;
+            padding: 10px;
+            border: none;
+            outline: none;
+            resize: none;
+            font-size: 14px;
+        }
 
-    // Fetch existing logs for the session
-    const existingLogs = await kvNamespace.get(sessionId, { type: "json" }) || [];
+        .chat-input button {
+            background-color: #0078d7;
+            color: #ffffff;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 14px;
+        }
 
-    // Append the new log entry
-    existingLogs.push(logEntry);
+        .chat-input button:hover {
+            background-color: #005bb5;
+        }
+    </style>
+</head>
+<body>
+    <div class="chat-container">
+        <div class="chat-header">
+            CodeWWW IT Support
+        </div>
+        <div class="chat-messages" id="chatMessages">
+            <!-- Messages will appear here -->
+        </div>
+        <div class="chat-input">
+            <textarea id="userMessage" placeholder="Type your message here..." rows="1"></textarea>
+            <button onclick="sendMessage()">Send</button>
+        </div>
+    </div>
 
-    // Save the updated logs back to KV
-    await kvNamespace.put(sessionId, JSON.stringify(existingLogs));
-}
+    <script>
+        const chatMessages = document.getElementById('chatMessages');
+        const userMessageInput = document.getElementById('userMessage');
+
+        function addMessage(content, sender) {
+            const message = document.createElement('div');
+            message.classList.add('message', sender);
+            const bubble = document.createElement('div');
+            bubble.classList.add('message-bubble');
+            bubble.textContent = content;
+            message.appendChild(bubble);
+            chatMessages.appendChild(message);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        function addTypingIndicator() {
+            const typingIndicator = document.createElement('div');
+            typingIndicator.classList.add('typing-indicator');
+            typingIndicator.textContent = "Agent is typing...";
+            typingIndicator.id = "typingIndicator";
+            chatMessages.appendChild(typingIndicator);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        function removeTypingIndicator() {
+            const typingIndicator = document.getElementById('typingIndicator');
+            if (typingIndicator) {
+                typingIndicator.remove();
+            }
+        }
+
+        async function sendMessage() {
+            const userMessage = userMessageInput.value.trim();
+            if (!userMessage) return;
+
+            addMessage(userMessage, 'user');
+            userMessageInput.value = '';
+
+            addTypingIndicator();
+
+            try {
+                await new Promise(resolve => setTimeout(resolve, 2000));
+
+                const response = await fetch('https://cool-breeze-b6de.cubiodojo.workers.dev/chat', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ message: userMessage }),
+                });
+
+                const data = await response.json();
+
+                removeTypingIndicator();
+                addMessage(data.response, 'bot');
+            } catch (error) {
+                removeTypingIndicator();
+                addMessage('Error: Unable to connect to the support agent.', 'bot');
+            }
+        }
+    </script>
+</body>
+</html>
