--- a/rep$$/018*362/index.html
+++ b/rep$$/018*362/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeWWW ProjectViewer</title>
+    <title>CodeWWW Error</title>
     <meta data-loc="948" vcode="438" data-inerror="true" data-abt="false">
     <style>
       @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
