--- a/zulu/login.html
+++ b/zulu/login.html
@@ -3,130 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Zulu SSO Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f9;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .login-container {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      width: 300px;
-    }
-    .login-container h1 {
-      font-size: 1.5rem;
-      margin-bottom: 20px;
       text-align: center;
+      margin: 50px;
     }
-    .form-group {
-      margin-bottom: 15px;
+    form {
+      display: inline-block;
+      text-align: left;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-    .form-group label {
+    label {
       display: block;
-      margin-bottom: 5px;
+      margin: 10px 0 5px;
     }
-    .form-group input {
+    input {
       width: 100%;
-      padding: 10px;
+      padding: 8px;
+      margin-bottom: 15px;
       border: 1px solid #ccc;
       border-radius: 4px;
     }
-    .form-group button {
-      width: 100%;
-      padding: 10px;
-      background: #007bff;
+    button {
+      background-color: #4CAF50;
       color: white;
       border: none;
+      padding: 10px 20px;
       border-radius: 4px;
       cursor: pointer;
     }
-    .form-group button:hover {
-      background: #0056b3;
-    }
-    .error {
-      color: red;
-      font-size: 0.9rem;
-      margin-top: 10px;
-    }
-    .success {
-      color: green;
-      font-size: 0.9rem;
-      margin-top: 10px;
+    button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h1>Login</h1>
-    <form id="login-form">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-      <div class="form-group">
-        <button type="submit">Login</button>
-      </div>
-      <div class="error" id="error-message" style="display: none;"></div>
-      <div class="success" id="success-message" style="display: none;"></div>
-    </form>
-  </div>
-
+  <h1>Welcome to Zulu SSO</h1>
+  <p>Please log in to continue:</p>
+  <form id="loginForm">
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required>
+    <button type="submit">Login</button>
+  </form>
+  <p id="message"></p>
   <script>
-    const loginForm = document.getElementById('login-form');
-    const errorMessage = document.getElementById('error-message');
-    const successMessage = document.getElementById('success-message');
+    const form = document.getElementById("loginForm");
+    const message = document.getElementById("message");
 
-    loginForm.addEventListener('submit', async (event) => {
-      event.preventDefault();
-
-      // Clear previous messages
-      errorMessage.style.display = 'none';
-      successMessage.style.display = 'none';
-
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
 
       try {
-        const response = await fetch('https://cwww-login.cubiodojo.workers.dev/login', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
+        const response = await fetch("https://your-zulu-sso-url/login", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
           body: JSON.stringify({ email, password }),
         });
 
-        if (!response.ok) {
-          const errorText = await response.text();
-          throw new Error(errorText);
+        if (response.ok) {
+          const data = await response.json();
+          message.textContent = `Login successful! Your token: ${data.token}`;
+          message.style.color = "green";
+        } else {
+          message.textContent = "Invalid credentials. Please try again.";
+          message.style.color = "red";
         }
-
-        const data = await response.json();
-        const token = data.token;
-
-        // Save token to localStorage (or cookies if preferred)
-        localStorage.setItem('authToken', token);
-
-        successMessage.textContent = 'Login successful!';
-        successMessage.style.display = 'block';
-
-        // Redirect to a protected page (optional)
-        setTimeout(() => {
-          window.location.href = '/protected-page.html'; // Replace with your protected page URL
-        }, 1000);
       } catch (error) {
-        errorMessage.textContent = error.message;
-        errorMessage.style.display = 'block';
+        message.textContent = "An error occurred. Please try again later.";
+        message.style.color = "red";
       }
     });
   </script>
