--- a/zulu/login.html
+++ b/zulu/login.html
@@ -63,7 +63,7 @@
       const password = document.getElementById("password").value;
 
       try {
-        const response = await fetch("https://your-zulu-sso-url/login", {
+        const response = await fetch("https://cwww-login.cubiodojo.workers.dev/login", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
