--- a/careers/index.html
+++ b/careers/index.html
@@ -81,13 +81,12 @@
     <script>
         async function fetchJobs() {
             try {
-                const response = await fetch('/api/jobs');
+                const response = await fetch('https://cwww-applications.cubiodojo.workers.dev/api/jobs');
                 if (!response.ok) throw new Error('Failed to fetch jobs');
                 const jobs = await response.json();
                 renderJobs(jobs);
             } catch (error) {
                 document.getElementById('job-container').innerHTML = '<p>Error loading job openings. Please try again later.</p>';
-                console.error(error);
             }
         }
 
@@ -135,7 +134,7 @@
                 job: jobId,
             };
             try {
-                const response = await fetch('/api/applications', {
+                const response = await fetch('https://cwww-applications.cubiodojo.workers.dev/api/applications', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(applicationData),
