--- a/status/check/?=true&/40482.html
+++ b/status/check/?=true&/40482.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="ProjectViewer">
+        <div class="top_banner">
+            <header>
+            </header>
+        </div>
         <div class="error-container">
             <center>
             <span class="error-icon"></span>
