--- a/status/check/?=true&/40482.html
+++ b/status/check/?=true&/40482.html
@@ -16,11 +16,10 @@
         <div class="error-container">
             <center>
             <span class="error-icon"></span>
-            <h1 class="error-text">Error 503 | Server error</h1>
-            <h3 class="server-info">Running V483 - Project Viewer. TID:AG47294HSK3</h3>
+            <h1 class="error-text">Service Suspended</h1>
+            <h3 class="server-info">Running V483 - Chat_AI_Broker. TID:AG47294HSK3</h3>
             </center>
         </div>
     </div>
-    <script src="./analytics.js"></script>
 </body>
 </html>
