--- a/guides/se/amazon/index.html
+++ b/guides/se/amazon/index.html
@@ -25,7 +25,7 @@
                                     <div class="main-button-content">
                                         <img src="https://firstaid.it.a2z.com/public/icons/setup_guide.svg" alt="Setup Guide Icon">
                                         <div class="main-button-text">
-                                            <h3><b>New Hires:</b> IT Setup Guide</h3>
+                                            <h3><b>SE Guide:</b> Agent 2 Agent (A2A)</h3>
                                         </div>
                                     </div>
                                 </button>
