--- a/guides/se/amazon/agent.html
+++ b/guides/se/amazon/agent.html
@@ -24,6 +24,20 @@
                             </p>
                             <p>Identity = Sai Sandeep Suggu | ITSE from GSD1
                             </p>
+                            <p>Quick Links:</p>
+                            <a href="https://aws.amazon.com">AWS</a>
+                            <br>
+                            <a href="https://midway-auth.amazon.com">Midway Authentication</a>
+                            <br>
+                            <a href="https://midway.amazon.com">Midway Security Keys</a>
+                            <br>
+                            <a href="https://firstaid.it.a2z.com">Amazon ITS Firstaid</a>
+                            <br>
+                            <a href="https://chime.aws">AWS Chime</a>
+                            <br>
+                            <br>
+                            <p>--------------------------------------------------------------</p>
+                            <br>
                             <p>Script:</p>
                             <p>Send message 1 as soon as you're connect to an agent.</p>
                             <h1>
