--- a/guides/se/amazon/agent.html
+++ b/guides/se/amazon/agent.html
@@ -19,12 +19,12 @@
                 </div>
                 <div class="button-list-content-center-aligned">
                         <div class="additional-text-box">
-                            <p>
+                            <h3>
                                 *Remember: Omnia tools/Omnia = chat service app
-                            </p>
-                            <p>Identity = Sai Sandeep Suggu | ITSE from GSD1
-                            </p>
-                            <p>Quick Links:</p>
+                            </h3>
+                            <h3>Identity = Sai Sandeep Suggu | ITSE from GSD1
+                            </h3>
+                            <h3>Quick Links:</h3>
                             <a href="https://aws.amazon.com">AWS</a>
                             <br>
                             <a href="https://midway-auth.amazon.com">Midway Authentication</a>
@@ -38,8 +38,8 @@
                             <br>
                             <p>--------------------------------------------------------------</p>
                             <br>
-                            <p>Script:</p>
-                            <p>Send message 1 as soon as you're connect to an agent.</p>
+                            <h3>Script:</h3>
+                            <h3>Send message 1 as soon as you're connect to an agent.</h3>
                             <h1>
                                 Message 1: Hello. Thank you for contacting IT Services. My name is Sai Sandeep Suggu.
                             </h1>
@@ -49,8 +49,8 @@
                             <h2>OR</h2>
                             <h2>Please share with me, your alias and personal email to verify.</h2>
                             <h2>If no response: Are you in need of IT support or have you solved the issue? </h2>
-                            <p>** If needed, at end of chat, inform you will get chat reviewed to see if there are issues:
-                                I will ask for this chat to be reviewed and see if there are other issues similar to this.</p>
+                            <h3>** If needed, at end of chat, inform you will get chat reviewed to see if there are issues:
+                                I will ask for this chat to be reviewed and see if there are other issues similar to this.</h3>
                         </div>
                     </div>
                 </div>
