--- a/guides/se/amazon/agent.html
+++ b/guides/se/amazon/agent.html
@@ -25,6 +25,7 @@
                             <h3>Identity = Sai Sandeep Suggu | ITSE from GSD1
                             </h3>
                             <h3>Quick Links:</h3>
+                            <p>NOTE: ITS Firstaid may be sunset soon and replaced with a local version to allow for intergration with CodeWWW provided tools and services.</p>
                             <a href="https://aws.amazon.com">AWS</a>
                             <br>
                             <a href="https://midway-auth.amazon.com">Midway Authentication</a>
