--- a/guides/se/amazon/chat.html
+++ b/guides/se/amazon/chat.html
@@ -6,8 +6,8 @@
     <title>FirstAid Helpdesk</title>
     <base href="/">
     <script defer="defer" src="index.js"></script>
-    <link rel="stylesheet" type="text/css" href="chatstyle.css">
-    <link rel="stylesheet" type="text/css" href="chatstyle2.css">
+    <link rel="stylesheet" type="text/css" href="https://firstaid.it.a2z.com/639.css">
+    <link rel="stylesheet" type="text/css" href="https://firstaid.it.a2z.com/846.css">
 </head>
 
 <body>
