--- a/guides/se/amazon/chat.html
+++ b/guides/se/amazon/chat.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <title>FirstAid Helpdesk</title>
     <base href="/">
-    <script defer="defer" src="index.js"></script>
+    <script defer="defer" src="https://firstaid.it.a2z.com/index.js"></script>
+    <script defer="defer" src="https://connect.it.a2z.com/agent.js"></script>
     <link rel="stylesheet" type="text/css" href="https://firstaid.it.a2z.com/639.css">
     <link rel="stylesheet" type="text/css" href="https://firstaid.it.a2z.com/846.css">
+    <link rel="stylesheet" type="text/css" href="https://connect.it.a2z.com/agent.css">
+</head>
 </head>
 
 <body>
