--- a/guides/se/amazon/chat.html
+++ b/guides/se/amazon/chat.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
@@ -10,12 +9,11 @@
     <link rel="stylesheet" type="text/css" href="https://firstaid.it.a2z.com/639.css">
     <link rel="stylesheet" type="text/css" href="https://firstaid.it.a2z.com/846.css">
     <link rel="stylesheet" type="text/css" href="https://connect.it.a2z.com/agent.css">
+    <link rel="icon" href="amazon-its-se-favicon.ico">
 </head>
 </head>
-
 <body>
     <div id="app">
-        <script>window.onload = function ();</script>
         <div class="firstaid-helpdesk">
             <div class="firstaid-chat-page">
                 <div class="firstaid-start-chat-page">
