--- a/guides/se/amazon/index.html
+++ b/guides/se/amazon/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+    <link rel="icon" href="amazon-its-se-favicon.ico">
     <meta data-lover="0.01" data-cwww-vers="0.937" data-locid="hf73j029jh9il3H">
 </head>
 <body>
