--- a/braveheart/index.html
+++ b/braveheart/index.html
@@ -22,7 +22,7 @@
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
             
-            const response = await fetch("https://cwww-auth-sso-braveheart.cubiodojo.workers.dev//login", {
+            const response = await fetch("https://cwww-auth-sso-braveheart.cubiodojo.workers.dev/login", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ username, password })
@@ -31,7 +31,7 @@
             if (response.ok) {
                 const data = await response.json();
                 localStorage.setItem("token", data.token);
-                alert("Login successful!");
+                window.location.href = `https://codewww.pages.dev/braveheart/dashboard.html?token=${data.token}`;
             } else {
                 alert("Invalid credentials");
             }
